RESOLVED FIXED242467
css/css-values/calc-text-indent-intrinsic-1.html WPT fails
https://bugs.webkit.org/show_bug.cgi?id=242467
Summary css/css-values/calc-text-indent-intrinsic-1.html WPT fails
Tim Nguyen (:ntim)
Reported 2022-07-07 11:38:36 PDT
ImageOnlyFailure
Attachments
Radar WebKit Bug Importer
Comment 1 2022-07-14 11:39:13 PDT
Ahmad Saleem
Comment 2 2026-04-04 23:42:52 PDT
EWS
Comment 3 2026-04-07 21:24:35 PDT
Committed 310759@main (3462fdfdf9b9): <https://commits.webkit.org/310759@main> Reviewed commits have been landed. Closing PR #62063 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.