text-indent: calc() with percentages should treat percentages as 0 for intrinsic size contributions https://bugs.webkit.org/show_bug.cgi?id=242467 rdar://97025949

Reviewed by Alan Baradlay.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Per [1], "Percentages must be treated as 0 for the purpose of
calculating intrinsic size contributions, but are always resolved
normally when performing layout."

The check only handled pure percentage values via isPercent(), missing
calc() expressions containing percentages like calc(50% - 3px). Widen
the check to isPercentOrCalculated() and evaluate with a zero
percentage basis so percentage components are treated as 0 while
fixed-length parts are preserved.

[1] https://drafts.csswg.org/css-text/#text-indent-property

* LayoutTests/TestExpectations: Progression
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp:
(WebCore::Layout::InlineFormattingUtils::computedTextIndent const):

Canonical link: https://commits.webkit.org/310759@main