Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2018 Apple Inc. All rights reserved.
+ * Copyright (C) 2018-2026 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -168,10 +168,12 @@ InlineLayoutUnit InlineFormattingUtils::computedTextIndent(IsIntrinsicWidthMode 
     auto& textIndentLength = root->style().textIndent().length;
     if (textIndentLength == 0_css_px)
         return { };
-    if (isIntrinsicWidthMode == IsIntrinsicWidthMode::Yes && textIndentLength.isPercent()) {
-        // Percentages must be treated as 0 for the purpose of calculating intrinsic size contributions.
+    if (isIntrinsicWidthMode == IsIntrinsicWidthMode::Yes && textIndentLength.isPercentOrCalculated()) {
+        // Percentages and calc() expressions containing percentages must be treated as 0
+        // for the purpose of calculating intrinsic size contributions, with a zero percentage
+        // basis so fixed-length components in calc() are still preserved.
         // https://drafts.csswg.org/css-text/#text-indent-property
-        return { };
+        return Style::evaluate<InlineLayoutUnit>(textIndentLength, 0, root->style().usedZoomForLength());
     }
     return Style::evaluate<InlineLayoutUnit>(textIndentLength, availableWidth, root->style().usedZoomForLength());
 }
